# zmq.rs

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  client.py  rustfmt.toml
.cargo/: config.toml
.github/workflows/: main-ci.yml
benches/: pub_sub.rs  req_rep.rs
c_benches/: Makefile  client.c  server.c
examples/: README.md  dealer_client.rs  forwarder_device.rs  message_broker.rs  message_client.rs  message_server.rs  router_server.rs  socket_client.rs  socket_client_with_options.rs  socket_server.rs  stock_client.rs  stock_server.rs  task_sink.rs  task_ventilator.rs  task_worker.rs  weather_client.rs  weather_server.rs  xpub_weather_server.rs
examples/async_helpers/: mod.rs
python/: README.md  message_broker.py  message_client.py  message_server.py  task_sink.py  task_ventilator.py  task_worker.py  weather_client.py  weather_server.py
src/: Makefile  backend.rs  codec.rs  consts.rs  ctx.rs  dealer.rs  dealer_router.rs  endpoint.rs  error.rs  fair_queue.rs  inproc.rs  lib.rs  message.rs  msg.rs  options.rs  pair.rs  peer.rs  pub.rs  pub_sub.rs  pull.rs  push.rs  rep.rs  req.rs  req_rep.rs  result.rs  router.rs  socket.rs  socket_base.rs  socket_interface.rs  stream_engine.rs  sub.rs  task_handle.rs  tcp_connecter.rs  tcp_listener.rs  tests.rs  util.rs  v2_decoder.rs  v2_encoder.rs  v2_protocol.rs  xpub.rs  (+1 more)
src/async_rt/: block_on_read_till_set.rs  mod.rs
src/async_rt/task/: async_std.rs  join_handle.rs  mod.rs  tokio.rs
src/codec/: command.rs  error.rs  framed.rs  greeting.rs  mechanism.rs  mod.rs  zmq_codec.rs
src/endpoint/: error.rs  host.rs  mod.rs  transport.rs
src/transport/: ipc.rs  mod.rs  tcp.rs
src/transport/ipc/: async_std.rs  mod.rs  tokio.rs
src/transport/tcp/: mod.rs  tokio.rs
tests/: helpers.rs  message.rs  pair.rs  pub_sub.rs  pub_sub_compliant.rs  rep_req.rs  req_rep.rs  req_rep_compliant.rs  req_router_dealer_rep.rs  xpub_sub.rs
tests/compliance/: mod.rs
