[package]
name = "zeromq"
version = "0.3.3"
authors = ["Alexei Kornienko <alexei.kornienko@gmail.com>"]
edition = "2018"
description = "A native Rust implementation of ZeroMQ"
license = "MIT"
repository = "https://github.com/zeromq/zmq.rs"

[features]
default = ["tokio-runtime", "all-transport"]
tokio-runtime = ["tokio", "tokio-util"]
async-std-runtime = ["async-std"]
all-transport = ["ipc-transport", "tcp-transport"]
ipc-transport = []
tcp-transport = []

[dependencies]
thiserror = "1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
rand = "0.8"
bytes = "1"
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
dashmap = "5"
crossbeam-queue = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
log = "0.4"
asynchronous-codec = "0.6"
async-std = { version = "1", features = ["attributes"], optional = true }

[dev-dependencies]
chrono = "0.4"
criterion = "0.3"
pretty_env_logger = "0.4"
zmq2 = "0.5.0"
hex = "0.4"


[lib]
bench = false

[[bench]]
name = "pub_sub"
harness = false
bench = false

[[bench]]
name = "req_rep"
harness = false
